# maeipmaechuljang

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  REVIEW.md  datahandler.cpp  datahandler.h  excelDatahandler.cpp  excelDatahandler.h  main.cpp  sqlDatahandler.cpp  sqlDatahandler.h  sqlRecordModel.h  syncManager.cpp  syncManager.h
QXlsx/: CMakeLists.txt
legacy/: MonthTotalqml.txt  mainqml.txt  myCalendarqml.txt
qml/: MonthTotal.qml  MyCalendar.qml
